--- a/src/meson.build
+++ b/src/meson.build
@@ -1,15 +1,15 @@
 pkgdatadir = get_option('datadir') / meson.project_name()
 gnome = import('gnome')
 
-src_res = gnome.compile_resources('com.github.azuredusk10.IconManager.src',
-  'com.github.azuredusk10.IconManager.src.gresource.xml',
+src_res = gnome.compile_resources('design.chris_wood.IconBear.src',
+  'design.chris_wood.IconBear.src.gresource.xml',
   gresource_bundle: true,
   install: true,
   install_dir: pkgdatadir,
 )
 
-data_res = gnome.compile_resources('com.github.azuredusk10.IconManager.data',
-  'com.github.azuredusk10.IconManager.data.gresource.xml',
+data_res = gnome.compile_resources('design.chris_wood.IconBear.data',
+  'design.chris_wood.IconBear.data.gresource.xml',
   gresource_bundle: true,
   install: true,
   install_dir: pkgdatadir,
@@ -22,11 +22,11 @@ bin_conf.set('PACKAGE_NAME', meson.project_name())
 bin_conf.set('prefix', get_option('prefix'))
 bin_conf.set('libdir', get_option('prefix') / get_option('libdir'))
 bin_conf.set('datadir', get_option('prefix') / get_option('datadir'))
-bin_conf.set('resource_path', '/com/github/azuredusk10/IconManager')
+bin_conf.set('resource_path', '/design/chris_wood/IconBear')
 
 configure_file(
-  input: 'com.github.azuredusk10.IconManager.in',
-  output: 'com.github.azuredusk10.IconManager',
+  input: 'design.chris_wood.IconBear.in',
+  output: 'design.chris_wood.IconBear',
   configuration: bin_conf,
   install: true,
   install_dir: get_option('bindir')
