port all except for AddSetDialog.blp

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,7 +11,7 @@ blueprints = custom_target('blueprints',
     'ui/IconTile.blp',
     'ui/MainPanelView.blp',
     'ui/SidebarView.blp',
-    # 'ui/Window.blp',
+    'ui/Window.blp',
   ),
   output: '.',
   command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
